# Storytelling

./: .clang-format  .gitattributes  .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure  configure.ac  meson.build
src/: main.cpp  struct.hpp
src/scene/: Makefile  scene.cpp  scene.hpp
src/utils/: Makefile
